# cli/internal/gen/api/swagger.json
@@ -1,7 +1,7 @@
 {
   "info": {
     "title": "PierceFlare",
-    "version": "v0.vike-prod",
+    "version": "1.1.0",
     "description": "All requests require an authentication token generated by the Pierceflare server, associated with a DDNS domain."
   },
   "openapi": "3.0.0",
@@ -67,9 +67,21 @@
           "200": {
             "description": "When flare request has been successfully acknoledged",
             "content": {
-              "text/plain": {
+              "application/json": {
                 "schema": {
-                  "$ref": "#/components/schemas/RemoteOperation"
+                  "type": "object",
+                  "properties": {
+                    "op": {
+                      "$ref": "#/components/schemas/RemoteOperation"
+                    },
+                    "resolvedIp": {
+                      "type": "string"
+                    }
+                  },
+                  "required": [
+                    "op",
+                    "resolvedIp"
+                  ]
                 }
               }
             }
